--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,15 @@
   publish = "dist"
   functions = "netlify/functions"
 
+[dev]
+  framework = "vite"  # Proxy Vite dev server
+
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200  # SPA fallback
